Add deactivateUsers endpoint
